@@ -38,12 +38,10 @@ import org.openjdk.jmh.runner.Runner;
 import org.openjdk.jmh.runner.RunnerException;
 import org.openjdk.jmh.runner.options.OptionsBuilder;
 
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.Optional;
 import java.util.concurrent.TimeUnit;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 @State(Scope.Benchmark)
@@ -66,14 +64,14 @@ public class MetadataResponseBenchmark {
                 new TopicPartition("benchmark", 42),
                 Optional.of(4),
                 Optional.of(42),
-                IntStream.range(0, nodes).boxed().collect(Collectors.toList()),
-                IntStream.range(0, nodes).filter(i1 -> i1 % 3 != 0).boxed().collect(Collectors.toList()),
-                IntStream.range(0, nodes).filter(i2 -> i2 % 3 == 0).boxed().collect(Collectors.toList()));
+                IntStream.range(0, nodes).boxed().toList(),
+                IntStream.range(0, nodes).filter(i1 -> i1 % 3 != 0).boxed().toList(),
+                IntStream.range(0, nodes).filter(i2 -> i2 % 3 == 0).boxed().toList());
         nodesById = new HashMap<>(nodes);
         for (int i = 0; i < nodes; i++) {
             nodesById.put(i, new Node(i, "localhost", 1234));
         }
-        nodesById = Collections.unmodifiableMap(nodesById);
+        nodesById = Map.copyOf(nodesById);
     }
 
     @Benchmark
