@@ -17,10 +17,11 @@
 package org.apache.kafka.tools.streams;
 
 import org.apache.kafka.clients.admin.Admin;
-import org.apache.kafka.clients.admin.AdminClientTestUtils;
 import org.apache.kafka.clients.admin.DeleteStreamsGroupsOptions;
 import org.apache.kafka.clients.admin.DeleteStreamsGroupsResult;
+import org.apache.kafka.clients.admin.DeleteTopicsOptions;
 import org.apache.kafka.clients.admin.DeleteTopicsResult;
+import org.apache.kafka.clients.admin.DescribeStreamsGroupsOptions;
 import org.apache.kafka.clients.admin.DescribeStreamsGroupsResult;
 import org.apache.kafka.clients.admin.DescribeTopicsOptions;
 import org.apache.kafka.clients.admin.DescribeTopicsResult;
@@ -28,7 +29,9 @@ import org.apache.kafka.clients.admin.GroupListing;
 import org.apache.kafka.clients.admin.KafkaAdminClient;
 import org.apache.kafka.clients.admin.ListGroupsOptions;
 import org.apache.kafka.clients.admin.ListGroupsResult;
+import org.apache.kafka.clients.admin.ListOffsetsOptions;
 import org.apache.kafka.clients.admin.ListOffsetsResult;
+import org.apache.kafka.clients.admin.ListStreamsGroupOffsetsOptions;
 import org.apache.kafka.clients.admin.ListStreamsGroupOffsetsResult;
 import org.apache.kafka.clients.admin.StreamsGroupDescription;
 import org.apache.kafka.clients.admin.StreamsGroupMemberAssignment;
@@ -42,16 +45,15 @@ import org.apache.kafka.common.KafkaFuture;
 import org.apache.kafka.common.Node;
 import org.apache.kafka.common.TopicPartition;
 import org.apache.kafka.common.TopicPartitionInfo;
+import org.apache.kafka.common.errors.UnknownTopicOrPartitionException;
 import org.apache.kafka.common.internals.KafkaFutureImpl;
 import org.apache.kafka.test.TestUtils;
 
 import org.junit.jupiter.api.Test;
-import org.mockito.ArgumentMatchers;
+import org.mockito.MockedStatic;
 
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collection;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
@@ -59,12 +61,13 @@ import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
+import java.util.concurrent.ExecutionException;
 import java.util.function.Function;
 import java.util.stream.Collectors;
-import java.util.stream.IntStream;
 
 import joptsimple.OptionException;
 
+import static org.apache.kafka.common.KafkaFuture.completedFuture;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertInstanceOf;
@@ -72,8 +75,12 @@ import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyCollection;
+import static org.mockito.ArgumentMatchers.anyMap;
+import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.mockStatic;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
@@ -90,19 +97,19 @@ public class StreamsGroupCommandTest {
 
         String[] cgcArgs = new String[]{"--bootstrap-server", BOOTSTRAP_SERVERS, "--list"};
         ListGroupsResult result = mock(ListGroupsResult.class);
-        when(result.all()).thenReturn(KafkaFuture.completedFuture(Arrays.asList(
+        when(result.all()).thenReturn(KafkaFuture.completedFuture(List.of(
             new GroupListing(firstGroup, Optional.of(GroupType.STREAMS), "streams", Optional.of(GroupState.STABLE)),
             new GroupListing(secondGroup, Optional.of(GroupType.STREAMS), "streams", Optional.of(GroupState.EMPTY))
         )));
         when(ADMIN_CLIENT.listGroups(any(ListGroupsOptions.class))).thenReturn(result);
         StreamsGroupCommand.StreamsGroupService service = getStreamsGroupService(cgcArgs);
-        Set<String> expectedGroups = new HashSet<>(Arrays.asList(firstGroup, secondGroup));
+        Set<String> expectedGroups = Set.of(firstGroup, secondGroup);
 
         final Set[] foundGroups = new Set[]{Set.of()};
         TestUtils.waitForCondition(() -> {
             foundGroups[0] = new HashSet<>(service.listStreamsGroups());
             return Objects.equals(expectedGroups, foundGroups[0]);
-        }, "Expected --list to show groups " + expectedGroups + ", but found " + foundGroups[0] + ".");
+        }, () -> "Expected --list to show groups " + expectedGroups + ", but found " + foundGroups[0] + ".");
 
         service.close();
     }
@@ -110,9 +117,7 @@ public class StreamsGroupCommandTest {
     @Test
     public void testListWithUnrecognizedOption() {
         String[] cgcArgs = new String[]{"--frivolous-nonsense", "--bootstrap-server", BOOTSTRAP_SERVERS, "--list"};
-        final Exception exception = assertThrows(OptionException.class, () -> {
-            getStreamsGroupService(cgcArgs);
-        });
+        final Exception exception = assertThrows(OptionException.class, () -> getStreamsGroupService(cgcArgs));
         assertEquals("frivolous-nonsense is not a recognized option", exception.getMessage());
     }
 
@@ -123,21 +128,21 @@ public class StreamsGroupCommandTest {
 
         String[] cgcArgs = new String[]{"--bootstrap-server", BOOTSTRAP_SERVERS, "--list", "--state"};
         ListGroupsResult resultWithAllStates = mock(ListGroupsResult.class);
-        when(resultWithAllStates.all()).thenReturn(KafkaFuture.completedFuture(Arrays.asList(
+        when(resultWithAllStates.all()).thenReturn(KafkaFuture.completedFuture(List.of(
             new GroupListing(firstGroup, Optional.of(GroupType.STREAMS), "streams", Optional.of(GroupState.STABLE)),
             new GroupListing(secondGroup, Optional.of(GroupType.STREAMS), "streams", Optional.of(GroupState.EMPTY))
         )));
         when(ADMIN_CLIENT.listGroups(any(ListGroupsOptions.class))).thenReturn(resultWithAllStates);
         StreamsGroupCommand.StreamsGroupService service = getStreamsGroupService(cgcArgs);
-        Set<GroupListing> expectedListing = new HashSet<>(Arrays.asList(
+        Set<GroupListing> expectedListing = Set.of(
             new GroupListing(firstGroup, Optional.of(GroupType.STREAMS), "streams", Optional.of(GroupState.STABLE)),
-            new GroupListing(secondGroup, Optional.of(GroupType.STREAMS), "streams", Optional.of(GroupState.EMPTY))));
+            new GroupListing(secondGroup, Optional.of(GroupType.STREAMS), "streams", Optional.of(GroupState.EMPTY)));
 
         final Set[] foundListing = new Set[]{Set.of()};
         TestUtils.waitForCondition(() -> {
-            foundListing[0] = new HashSet<>(service.listStreamsGroupsInStates(new HashSet<>(Arrays.asList(GroupState.values()))));
+            foundListing[0] = new HashSet<>(service.listStreamsGroupsInStates(Set.of(GroupState.values())));
             return Objects.equals(expectedListing, foundListing[0]);
-        }, "Expected to show groups " + expectedListing + ", but found " + foundListing[0]);
+        }, () -> "Expected to show groups " + expectedListing + ", but found " + foundListing[0]);
 
         ListGroupsResult resultWithStableState = mock(ListGroupsResult.class);
         when(resultWithStableState.all()).thenReturn(KafkaFuture.completedFuture(List.of(
@@ -152,7 +157,7 @@ public class StreamsGroupCommandTest {
         TestUtils.waitForCondition(() -> {
             foundListing[0] = new HashSet<>(service.listStreamsGroupsInStates(Set.of(GroupState.STABLE)));
             return Objects.equals(expectedListingStable, foundListing[0]);
-        }, "Expected to show groups " + expectedListingStable + ", but found " + foundListing[0]);
+        }, () -> "Expected to show groups " + expectedListingStable + ", but found " + foundListing[0]);
 
         service.close();
     }
@@ -174,7 +179,7 @@ public class StreamsGroupCommandTest {
             null);
         resultMap.put(firstGroup, exp);
         when(result.all()).thenReturn(KafkaFuture.completedFuture(resultMap));
-        when(ADMIN_CLIENT.describeStreamsGroups(ArgumentMatchers.anyCollection())).thenReturn(result);
+        when(ADMIN_CLIENT.describeStreamsGroups(anyCollection(),  any(DescribeStreamsGroupsOptions.class))).thenReturn(result);
 
         StreamsGroupCommandOptions streamsGroupCommandOptions = new StreamsGroupCommandOptions(
             new String[]{"--bootstrap-server", BOOTSTRAP_SERVERS, "--group", firstGroup, "--describe"});
@@ -200,19 +205,19 @@ public class StreamsGroupCommandTest {
         when(startOffset.all()).thenReturn(KafkaFuture.completedFuture(startOffsetResultMap));
         when(endOffset.all()).thenReturn(KafkaFuture.completedFuture(endOffsetResultMap));
 
-        when(ADMIN_CLIENT.listOffsets(ArgumentMatchers.anyMap())).thenReturn(startOffset, endOffset);
+        when(ADMIN_CLIENT.listOffsets(anyMap(), any(ListOffsetsOptions.class))).thenReturn(startOffset, endOffset);
 
         ListStreamsGroupOffsetsResult result = mock(ListStreamsGroupOffsetsResult.class);
         Map<TopicPartition, OffsetAndMetadata> committedOffsetsMap = new HashMap<>();
         committedOffsetsMap.put(new TopicPartition("topic1", 0), new OffsetAndMetadata(12, Optional.of(0), ""));
 
-        when(ADMIN_CLIENT.listStreamsGroupOffsets(ArgumentMatchers.anyMap())).thenReturn(result);
-        when(result.partitionsToOffsetAndMetadata(ArgumentMatchers.anyString())).thenReturn(KafkaFuture.completedFuture(committedOffsetsMap));
+        when(ADMIN_CLIENT.listStreamsGroupOffsets(anyMap(), any(ListStreamsGroupOffsetsOptions.class))).thenReturn(result);
+        when(result.partitionsToOffsetAndMetadata(anyString())).thenReturn(KafkaFuture.completedFuture(committedOffsetsMap));
 
         DescribeStreamsGroupsResult describeResult = mock(DescribeStreamsGroupsResult.class);
         StreamsGroupDescription groupDescription = mock(StreamsGroupDescription.class);
         StreamsGroupSubtopologyDescription subtopology = mock(StreamsGroupSubtopologyDescription.class);
-        when(ADMIN_CLIENT.describeStreamsGroups(List.of(groupId))).thenReturn(describeResult);
+        when(ADMIN_CLIENT.describeStreamsGroups(eq(List.of(groupId)), any(DescribeStreamsGroupsOptions.class))).thenReturn(describeResult);
         when(describeResult.all()).thenReturn(KafkaFuture.completedFuture(Map.of(groupId, groupDescription)));
         when(groupDescription.subtopologies()).thenReturn(List.of(subtopology));
         when(subtopology.sourceTopics()).thenReturn(List.of("topic1"));
@@ -256,34 +261,34 @@ public class StreamsGroupCommandTest {
     @Test
     public void testGroupStatesFromString() {
         Set<GroupState> result = StreamsGroupCommand.groupStatesFromString("empty");
-        assertEquals(new HashSet<>(List.of(GroupState.EMPTY)), result);
+        assertEquals(Set.of(GroupState.EMPTY), result);
         result = StreamsGroupCommand.groupStatesFromString("EMPTY");
-        assertEquals(new HashSet<>(List.of(GroupState.EMPTY)), result);
+        assertEquals(Set.of(GroupState.EMPTY), result);
 
         result = StreamsGroupCommand.groupStatesFromString("notready");
-        assertEquals(new HashSet<>(List.of(GroupState.NOT_READY)), result);
+        assertEquals(Set.of(GroupState.NOT_READY), result);
         result = StreamsGroupCommand.groupStatesFromString("notReady");
-        assertEquals(new HashSet<>(List.of(GroupState.NOT_READY)), result);
+        assertEquals(Set.of(GroupState.NOT_READY), result);
 
         result = StreamsGroupCommand.groupStatesFromString("assigning");
-        assertEquals(new HashSet<>(List.of(GroupState.ASSIGNING)), result);
+        assertEquals(Set.of(GroupState.ASSIGNING), result);
         result = StreamsGroupCommand.groupStatesFromString("ASSIGNING");
-        assertEquals(new HashSet<>(List.of(GroupState.ASSIGNING)), result);
+        assertEquals(Set.of(GroupState.ASSIGNING), result);
 
         result = StreamsGroupCommand.groupStatesFromString("RECONCILING");
-        assertEquals(new HashSet<>(List.of(GroupState.RECONCILING)), result);
+        assertEquals(Set.of(GroupState.RECONCILING), result);
         result = StreamsGroupCommand.groupStatesFromString("reconCILING");
-        assertEquals(new HashSet<>(List.of(GroupState.RECONCILING)), result);
+        assertEquals(Set.of(GroupState.RECONCILING), result);
 
         result = StreamsGroupCommand.groupStatesFromString("STABLE");
-        assertEquals(new HashSet<>(List.of(GroupState.STABLE)), result);
+        assertEquals(Set.of(GroupState.STABLE), result);
         result = StreamsGroupCommand.groupStatesFromString("stable");
-        assertEquals(new HashSet<>(List.of(GroupState.STABLE)), result);
+        assertEquals(Set.of(GroupState.STABLE), result);
 
         result = StreamsGroupCommand.groupStatesFromString("DEAD");
-        assertEquals(new HashSet<>(List.of(GroupState.DEAD)), result);
+        assertEquals(Set.of(GroupState.DEAD), result);
         result = StreamsGroupCommand.groupStatesFromString("dead");
-        assertEquals(new HashSet<>(List.of(GroupState.DEAD)), result);
+        assertEquals(Set.of(GroupState.DEAD), result);
 
         assertThrow("preparingRebalance");
         assertThrow("completingRebalance");
@@ -295,35 +300,42 @@ public class StreamsGroupCommandTest {
     @Test
     public void testAdminRequestsForResetOffsets() {
         Admin adminClient = mock(KafkaAdminClient.class);
+        String topic = "topic1";
         String groupId = "foo-group";
-        List<String> args = new ArrayList<>(Arrays.asList("--bootstrap-server", "localhost:9092", "--group", groupId, "--reset-offsets", "--input-topic", "topic1", "--to-latest"));
-        List<String> topics = List.of("topic1");
+        List<String> args = List.of("--bootstrap-server", "localhost:9092", "--group", groupId, "--reset-offsets", "--input-topic", "topic1", "--to-latest");
+        List<String> topics = List.of(topic);
 
-        when(adminClient.describeStreamsGroups(List.of(groupId)))
+        DescribeTopicsResult describeTopicsResult = mock(DescribeTopicsResult.class);
+        when(adminClient.describeStreamsGroups(eq(List.of(groupId)), any(DescribeStreamsGroupsOptions.class)))
             .thenReturn(describeStreamsResult(groupId, GroupState.DEAD));
-        when(adminClient.describeTopics(eq(topics), any(DescribeTopicsOptions.class)))
-            .thenReturn(describeTopicsResult(topics, 1));
-        when(adminClient.listOffsets(any(), any()))
+        Map<String, TopicDescription> descriptions = Map.of(
+            topic, new TopicDescription(topic, false, List.of(
+                new TopicPartitionInfo(0, Node.noNode(), List.of(), List.of()))
+        ));
+        when(adminClient.describeTopics(anyCollection(), any(DescribeTopicsOptions.class)))
+            .thenReturn(describeTopicsResult);
+        when(describeTopicsResult.allTopicNames()).thenReturn(completedFuture(descriptions));
+        when(adminClient.listOffsets(anyMap(), any(ListOffsetsOptions.class)))
             .thenReturn(listOffsetsResult());
         ListGroupsResult listGroupsResult = listGroupResult(groupId);
         when(adminClient.listGroups(any(ListGroupsOptions.class))).thenReturn(listGroupsResult);
         ListStreamsGroupOffsetsResult result = mock(ListStreamsGroupOffsetsResult.class);
         Map<TopicPartition, OffsetAndMetadata> committedOffsetsMap = new HashMap<>();
-        committedOffsetsMap.put(new TopicPartition("topic1", 0), mock(OffsetAndMetadata.class));
-        when(adminClient.listStreamsGroupOffsets(ArgumentMatchers.anyMap())).thenReturn(result);
-        when(result.partitionsToOffsetAndMetadata(ArgumentMatchers.anyString())).thenReturn(KafkaFuture.completedFuture(committedOffsetsMap));
+        committedOffsetsMap.put(new TopicPartition(topic, 0), mock(OffsetAndMetadata.class));
+        when(adminClient.listStreamsGroupOffsets(anyMap(), any(ListStreamsGroupOffsetsOptions.class))).thenReturn(result);
+        when(result.partitionsToOffsetAndMetadata(anyString())).thenReturn(KafkaFuture.completedFuture(committedOffsetsMap));
 
         StreamsGroupCommand.StreamsGroupService service = getStreamsGroupService(args.toArray(new String[0]), adminClient);
         Map<String, Map<TopicPartition, OffsetAndMetadata>> resetResult = service.resetOffsets();
 
-        assertEquals(Collections.singleton(groupId), resetResult.keySet());
-        assertEquals(new HashSet<>(List.of(new TopicPartition(topics.get(0), 0))),
+        assertEquals(Set.of(groupId), resetResult.keySet());
+        assertEquals(Set.of(new TopicPartition(topics.get(0), 0)),
             resetResult.get(groupId).keySet());
 
-        verify(adminClient, times(1)).describeStreamsGroups(List.of(groupId));
+        verify(adminClient, times(1)).describeStreamsGroups(eq(List.of(groupId)), any(DescribeStreamsGroupsOptions.class));
         verify(adminClient, times(1)).describeTopics(eq(topics), any(DescribeTopicsOptions.class));
-        verify(adminClient, times(1)).listOffsets(any(), any());
-        verify(adminClient, times(1)).listStreamsGroupOffsets(any());
+        verify(adminClient, times(1)).listOffsets(anyMap(), any(ListOffsetsOptions.class));
+        verify(adminClient, times(1)).listStreamsGroupOffsets(anyMap(), any(ListStreamsGroupOffsetsOptions.class));
 
         service.close();
     }
@@ -331,7 +343,7 @@ public class StreamsGroupCommandTest {
     @Test
     public void testRetrieveInternalTopics() {
         String groupId = "foo-group";
-        List<String> args = new ArrayList<>(Arrays.asList("--bootstrap-server", "localhost:9092", "--group", groupId, "--delete"));
+        List<String> args = List.of("--bootstrap-server", "localhost:9092", "--group", groupId, "--delete");
         List<String> sourceTopics = List.of("source-topic1", "source-topic2");
         List<String> repartitionSinkTopics = List.of("rep-sink-topic1", "rep-sink-topic2");
         Map<String, StreamsGroupSubtopologyDescription.TopicInfo> stateChangelogTopics = Map.of(
@@ -357,14 +369,14 @@ public class StreamsGroupCommandTest {
             null));
         DescribeStreamsGroupsResult result = mock(DescribeStreamsGroupsResult.class);
         when(result.all()).thenReturn(KafkaFuture.completedFuture(resultMap));
-        when(ADMIN_CLIENT.describeStreamsGroups(ArgumentMatchers.anyCollection())).thenReturn(result);
+        when(ADMIN_CLIENT.describeStreamsGroups(anyCollection(), any(DescribeStreamsGroupsOptions.class))).thenReturn(result);
 
         StreamsGroupCommand.StreamsGroupService service = getStreamsGroupService(args.toArray(new String[0]));
         Map<String, List<String>> internalTopics = service.retrieveInternalTopics(List.of(groupId));
 
         assertNotNull(internalTopics.get(groupId));
         assertEquals(4, internalTopics.get(groupId).size());
-        assertEquals(new HashSet<>(List.of(groupId + "-1-changelog", groupId + "-2-changelog", groupId + "-1-repartition", groupId + "-2-repartition")),
+        assertEquals(Set.of(groupId + "-1-changelog", groupId + "-2-changelog", groupId + "-1-repartition", groupId + "-2-repartition"),
             new HashSet<>(internalTopics.get(groupId)));
         assertFalse(internalTopics.get(groupId).stream().anyMatch(List.of("some-pre-fix-changelog", groupId + "-some-thing")::contains));
         assertFalse(internalTopics.get(groupId).stream().anyMatch(sourceTopics::contains));
@@ -377,17 +389,17 @@ public class StreamsGroupCommandTest {
     public void testDeleteStreamsGroup() {
         Admin adminClient = mock(KafkaAdminClient.class);
         String groupId = "foo-group";
-        List<String> args = new ArrayList<>(Arrays.asList("--bootstrap-server", "localhost:9092", "--group", groupId, "--delete", "--delete-all-internal-topics"));
+        List<String> args = List.of("--bootstrap-server", "localhost:9092", "--group", groupId, "--delete", "--delete-all-internal-topics");
 
         DeleteStreamsGroupsResult deleteStreamsGroupsResult = mock(DeleteStreamsGroupsResult.class);
         when(adminClient.deleteStreamsGroups(eq(List.of(groupId)), any(DeleteStreamsGroupsOptions.class))).thenReturn(deleteStreamsGroupsResult);
         when(deleteStreamsGroupsResult.deletedGroups()).thenReturn(Map.of(groupId, KafkaFuture.completedFuture(null)));
         DeleteTopicsResult deleteTopicsResult = mock(DeleteTopicsResult.class);
         when(deleteTopicsResult.all()).thenReturn(KafkaFuture.completedFuture(null));
-        when(adminClient.deleteTopics(ArgumentMatchers.anyCollection())).thenReturn(deleteTopicsResult);
+        when(adminClient.deleteTopics(anyCollection(), any(DeleteTopicsOptions.class))).thenReturn(deleteTopicsResult);
         DescribeStreamsGroupsResult describeStreamsGroupsResult = mock(DescribeStreamsGroupsResult.class);
         when(describeStreamsGroupsResult.all()).thenReturn(KafkaFuture.completedFuture(Map.of(groupId, mock(StreamsGroupDescription.class))));
-        when(adminClient.describeStreamsGroups(any())).thenReturn(describeStreamsGroupsResult);
+        when(adminClient.describeStreamsGroups(any(), any(DescribeStreamsGroupsOptions.class))).thenReturn(describeStreamsGroupsResult);
         ListGroupsResult listGroupsResult = mock(ListGroupsResult.class);
         when(adminClient.listGroups(any())).thenReturn(listGroupsResult);
         when(listGroupsResult.all()).thenReturn(KafkaFuture.completedFuture(List.of(new GroupListing(groupId, Optional.of(GroupType.STREAMS), "streams", Optional.of(GroupState.EMPTY)))));
@@ -397,9 +409,9 @@ public class StreamsGroupCommandTest {
 
         verify(adminClient, times(1)).listGroups(any(ListGroupsOptions.class));
         verify(adminClient, times(1)).deleteStreamsGroups(eq(List.of(groupId)), any(DeleteStreamsGroupsOptions.class));
-        verify(adminClient, times(1)).describeStreamsGroups(any());
+        verify(adminClient, times(1)).describeStreamsGroups(any(), any(DescribeStreamsGroupsOptions.class));
         // because of having 0 internal topics, we do not expect deleteTopics to be called
-        verify(adminClient, times(0)).deleteTopics(ArgumentMatchers.anyCollection());
+        verify(adminClient, times(0)).deleteTopics(anyCollection(), any(DeleteTopicsOptions.class));
 
         service.close();
     }
@@ -408,7 +420,7 @@ public class StreamsGroupCommandTest {
     public void testDeleteNonStreamsGroup() {
         Admin adminClient = mock(KafkaAdminClient.class);
         String groupId = "foo-group";
-        List<String> args = new ArrayList<>(Arrays.asList("--bootstrap-server", "localhost:9092", "--group", groupId, "--delete"));
+        List<String> args = List.of("--bootstrap-server", "localhost:9092", "--group", groupId, "--delete");
 
         ListGroupsResult listGroupsResult = mock(ListGroupsResult.class);
         when(adminClient.listGroups(any())).thenReturn(listGroupsResult);
@@ -418,16 +430,89 @@ public class StreamsGroupCommandTest {
         Map<String, Throwable> result = service.deleteGroups();
 
         assertNotNull(result.get(groupId));
-        assertEquals(result.get(groupId).getMessage(),
-            "Group '" + groupId + "' does not exist or is not a streams group.");
+        assertEquals("Group '" + groupId + "' does not exist or is not a streams group.",
+            result.get(groupId).getMessage());
         assertInstanceOf(IllegalArgumentException.class, result.get(groupId));
         verify(adminClient, times(1)).listGroups(any(ListGroupsOptions.class));
         // we do not expect any further API to be called
         verify(adminClient, times(0)).deleteStreamsGroups(eq(List.of(groupId)), any(DeleteStreamsGroupsOptions.class));
-        verify(adminClient, times(0)).describeStreamsGroups(any());
-        verify(adminClient, times(0)).deleteTopics(ArgumentMatchers.anyCollection());
+        verify(adminClient, times(0)).describeStreamsGroups(any(), any(DescribeStreamsGroupsOptions.class));
+        verify(adminClient, times(0)).deleteTopics(anyCollection(), any(DeleteTopicsOptions.class));
 
         service.close();
+    }
+    
+    @Test
+    public void testResetOffsetsWithPartitionNotExist() {
+        Admin adminClient = mock(KafkaAdminClient.class);
+        String groupId = "foo-group";
+        String topic = "topic";
+        List<String> args = new ArrayList<>(Arrays.asList("--bootstrap-server", "localhost:9092", "--group", groupId, "--reset-offsets", "--input-topic", "topic:3", "--to-latest"));
+        
+        when(adminClient.describeStreamsGroups(eq(List.of(groupId)), any(DescribeStreamsGroupsOptions.class)))
+            .thenReturn(describeStreamsResult(groupId, GroupState.DEAD));
+        DescribeTopicsResult describeTopicsResult = mock(DescribeTopicsResult.class);
+
+        Map<String, TopicDescription> descriptions = Map.of(
+            topic, new TopicDescription(topic, false, List.of(
+                new TopicPartitionInfo(0, Node.noNode(), List.of(), List.of()))
+        ));
+        when(adminClient.describeTopics(anyCollection(), any(DescribeTopicsOptions.class)))
+            .thenReturn(describeTopicsResult);
+        when(describeTopicsResult.allTopicNames()).thenReturn(completedFuture(descriptions));
+        when(adminClient.listOffsets(anyMap(), any(ListOffsetsOptions.class)))
+            .thenReturn(listOffsetsResult());
+        ListStreamsGroupOffsetsResult result = mock(ListStreamsGroupOffsetsResult.class);
+        Map<TopicPartition, OffsetAndMetadata> committedOffsetsMap = Map.of(
+            new TopicPartition(topic, 0), 
+            new OffsetAndMetadata(12, Optional.of(0), ""),
+            new TopicPartition(topic, 1),
+            new OffsetAndMetadata(12, Optional.of(0), "")  
+        );
+        
+        when(adminClient.listStreamsGroupOffsets(anyMap(), any(ListStreamsGroupOffsetsOptions.class))).thenReturn(result);
+        when(result.partitionsToOffsetAndMetadata(anyString())).thenReturn(KafkaFuture.completedFuture(committedOffsetsMap));
+        StreamsGroupCommand.StreamsGroupService service = getStreamsGroupService(args.toArray(new String[0]), adminClient);
+        assertThrows(UnknownTopicOrPartitionException.class, () -> service.resetOffsets());
+        service.close();
+    }
+
+    @Test
+    public void testExitCodeOnInvalidOption() {
+        String[] args = new String[]{"--invalid-option"};
+        assertEquals(1, StreamsGroupCommand.execute(args));
+    }
+
+    @Test
+    public void testExitCodeOnIllegalArguments() {
+        String[] args = new String[]{"--bootstrap-server", BOOTSTRAP_SERVERS};
+        assertEquals(1, StreamsGroupCommand.execute(args));
+    }
+
+    @Test
+    public void testExitCodeOnExecutionException() {
+        try (MockedStatic<StreamsGroupCommand> mockedStreamGroupCommand = mockStatic(StreamsGroupCommand.class)) {
+            String[] args = new String[]{"--bootstrap-server", BOOTSTRAP_SERVERS, "--list"};
+            mockedStreamGroupCommand.when(() -> StreamsGroupCommand.execute(any(String[].class))).thenCallRealMethod();
+            mockedStreamGroupCommand.when(() -> StreamsGroupCommand.run(any(StreamsGroupCommandOptions.class))).thenThrow(new ExecutionException("ExecutionException", new RuntimeException()));
+            
+            assertEquals(1, StreamsGroupCommand.execute(args));
+            
+            mockedStreamGroupCommand.verify(() -> StreamsGroupCommand.run(any(StreamsGroupCommandOptions.class)));
+        }
+    }
+
+    @Test
+    public void testExitCodeOnInterruptedException() {
+        try (MockedStatic<StreamsGroupCommand> mockedStreamGroupCommand = mockStatic(StreamsGroupCommand.class)) {
+            String[] args = new String[]{"--bootstrap-server", BOOTSTRAP_SERVERS, "--list"};
+            mockedStreamGroupCommand.when(() -> StreamsGroupCommand.execute(any(String[].class))).thenCallRealMethod();
+            mockedStreamGroupCommand.when(() -> StreamsGroupCommand.run(any(StreamsGroupCommandOptions.class))).thenThrow(new InterruptedException("InterruptedException"));
+            
+            assertEquals(1, StreamsGroupCommand.execute(args));
+            
+            mockedStreamGroupCommand.verify(() -> StreamsGroupCommand.run(any(StreamsGroupCommandOptions.class)));
+        }
     }
 
     private ListGroupsResult listGroupResult(String groupId) {
@@ -449,7 +534,7 @@ public class StreamsGroupCommandTest {
     }
 
     private static void assertThrow(final String wrongState) {
-        final Set<String> validStates = new HashSet<>(Arrays.asList("Assigning", "Dead", "Empty", "Reconciling", "Stable", "NotReady"));
+        final Set<String> validStates = Set.of("Assigning", "Dead", "Empty", "Reconciling", "Stable", "NotReady");
 
         final Exception exception = assertThrows(IllegalArgumentException.class, () -> StreamsGroupCommand.groupStatesFromString(wrongState));
 
@@ -457,9 +542,9 @@ public class StreamsGroupCommandTest {
 
         final String[] exceptionMessage = exception.getMessage().split(" Valid states are: ");
         assertEquals("Invalid state list '" + wrongState + "'.", exceptionMessage[0]);
-        assertEquals(Arrays.stream(exceptionMessage[1].split(","))
+        assertEquals(validStates, Arrays.stream(exceptionMessage[1].split(","))
             .map(String::trim)
-            .collect(Collectors.toSet()), validStates);
+            .collect(Collectors.toSet()));
     }
 
     private DescribeStreamsGroupsResult describeStreamsResult(String groupId, GroupState groupState) {
@@ -472,26 +557,14 @@ public class StreamsGroupCommandTest {
             0,
             0,
             0,
-            Collections.singletonList(new StreamsGroupSubtopologyDescription("subtopologyId", Collections.emptyList(), Collections.emptyList(), Map.of(), Map.of())),
+            List.of(new StreamsGroupSubtopologyDescription("subtopologyId", List.of(), List.of(), Map.of(), Map.of())),
             List.of(memberDescription),
             groupState,
             new Node(1, "localhost", 9092),
             Set.of());
         KafkaFutureImpl<StreamsGroupDescription> future = new KafkaFutureImpl<>();
         future.complete(description);
-        return new DescribeStreamsGroupsResult(Collections.singletonMap(groupId, future));
-    }
-
-    private DescribeTopicsResult describeTopicsResult(Collection<String> topics, int numOfPartitions) {
-        Map<String, TopicDescription> topicDescriptions = new HashMap<>();
-
-        topics.forEach(topic -> {
-            List<TopicPartitionInfo> partitions = IntStream.range(0, numOfPartitions)
-                .mapToObj(i -> new TopicPartitionInfo(i, null, Collections.emptyList(), Collections.emptyList()))
-                .collect(Collectors.toList());
-            topicDescriptions.put(topic, new TopicDescription(topic, false, partitions));
-        });
-        return AdminClientTestUtils.describeTopicsResult(topicDescriptions);
+        return new DescribeStreamsGroupsResult(Map.of(groupId, future));
     }
 
     private ListOffsetsResult listOffsetsResult() {
